Bug 1961008 - Part 1: Only disconnect DocumentChannel from LoadGroup early for Downloads, r=smaug,necko-reviewers,valentin, a=dmeehan

Differential Revision: https://phabricator.services.mozilla.com/D246974